<resources>
    <string name="app_name">vetro app</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="pick_country">Pick Country</string>
    <string name="country_picker">Country Picker</string>
    <string name="country_name">Country Name</string>
    <string name="country_iso_code">Country ISO Code</string>
    <string name="country_dial_code">Country Dial Code</string>
    <string name="country_currency">Country Currency</string>
    <string name="country_flag">Country Flag</string>
    <string name="new_theme">Use New Theme</string>
    <string name="custom_style">Use Custom Style</string>
    <string name="use_bottom_sheet">Use Bottom Sheet</string>
    <string name="allow_search">Allow Search</string>
    <string name="get_country_by_name">Get Country by Name</string>
    <string name="get_country_by_sim">Get Country By Sim</string>
    <string name="get_country_by_local">Get country By Local</string>
    <string name="get_country_by_iso">Get Country By ISO</string>
    <string name="iso_code">ISO Code</string>
    <string name="dial_code">Dial Code</string>
    <string name="name">Name</string>
    <string name="none_default">None/Default</string>
    <string name="sort_by">Sort By</string>
    <string name="example_name">Stella</string>
    <string name="story">Stories</string>
    <string name="friends">Friends</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="profile_b">Profile</string>
    <string name="profile_s">profile</string>
    <string name="story_b">Story</string>
    <string name="story_s">story</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">Your facebook app id</string>
    <string name="title_activity_basic">BasicActivity</string>

    <string name="app_title">Image Cropper</string>
    <string name="result_image_desc">crop result</string>

    <string name="main_drawer_load">Load Image for cropping</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>

    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="main_action_flip">Flip</string>
    <string name="main_action_flip_horizontally">Flip horizontally</string>
    <string name="main_action_flip_vertically">Flip vertically</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="drawer_option_oval">Circular</string>
    <string name="drawer_option_rect">Rectangular</string>
    <string name="drawer_option_min_max">Min/Max limits override</string>
    <string name="drawer_option_customized_overlay">Customized Overlay</string>
    <string name="drawer_option_scale_center">Scale Center Inside</string>
    <string name="drawer_option_title2">Customization Toggles</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
    <string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
    <string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
    <string name="drawer_option_toggle_aspect_ratio">Aspect Ratio: %1s</string>
    <string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
    <string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
    <string name="drawer_option_set_initial_crop_rect">Set initial crop rectangle</string>
    <string name="drawer_option_reset_crop_rect">Reset crop rectangle to initial</string>
    <string name="drawer_option_toggle_multitouch">Multitouch: %1s</string>
    <string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
    <string name="drawer_option_toggle_show_progress_bar">Show Progress Bar: %1s</string>

    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>

    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
</resources>
